--- a/src/components/customer/CustomerHome.css
+++ b/src/components/customer/CustomerHome.css
@@ -15,6 +15,8 @@
   color: var(--text-main);
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
+  min-height: 100vh;
 }
 
 /* Hero Section */
